small fixes to pass lint

--- a/whatsapp-dracula.user.css
+++ b/whatsapp-dracula.user.css
@@ -14,7 +14,7 @@
     --background-default-hover: #44475a;
     --background-default-active: #44475a;
     --app-background-stripe: #44475A;
-    
+    /* panel */
     --border-list: #44475a;
     --panel-background-lighter: #44475A;
     --panel-background-colored: #44475A;
@@ -22,10 +22,9 @@
     --panel-background-deep: #44475A;
     --panel-background-deeper: #282a36;
     --panel-header-background: #282a36;
-    
     --search-input-background: #44475A;
-    
-    --conversation-panel-background:#282a36;
+    /* conversation */
+    --conversation-panel-background: #282a36;
     --incoming-background: #6272a4;
     --incoming-background-rgb: rgb(98, 114, 164);
     --outgoing-background: #44475a;
@@ -33,65 +32,55 @@
     --outgoing-background-deeper: #282a36;
     --system-message-background: #6272a4;
     --bubble-meta: #8be9fd;
-    
-    
+    /* compose */
     --rich-text-panel-background: #282a36;
     --compose-background: #44475a;
     --compose-border: #44475a;
     --compose-primary: #f8f8f2;
-    
+    /* intro */
     --intro-background: #282A36;
-    
     /* modal */
-    --modal-backdrop: rgba(68, 71, 90, 0.85);
-    
+    --modal-backdrop: rgba(68, 71, 90, .85);
     /* drawer */
     --drawer-background: #282a36;
     --drawer-gallery-background: #282a36;
     --drawer-section-background: #44475a;
-    
     /* media viewer */
     --media-viewer-background: #282A36;
     --media-viewer-button-background: #6272a4;
-    
     /* avatar */
     --avatar-background: #282a36;
     --avatar-placeholder-background: #44475a;
     --avatar-placeholder-primary: #f8f8f2;
-    
     /* dropdown */
     --dropdown-background: #44475a;
     --dropdown-background-hover: #6272a4;
-    
     /* battery warning */
-    --butterbar-battery-background: #ff5555;
-    
+    --butterbar-battery-background: #f55;
     /* misc */
     --button-round-background: #6272a4;
     --button-alternative-background: #6272a4;
     --empty-state-background: #44475a;
-    
     --thumb-border-active: #6272a4;
     --input-border-active: #6272a4;
-    
     /* font colors */
     --primary: #f8f8f2;
     --primary-title: #8BE9FD;
     --primary-strong: #f1fa8c;
     --primary-stronger: #f1fa8c;
-    --secondary-stronger: rgba(98,114,164,0.8);
-    --secondary: rgba(98,114,164,0.8);
-    --secondary-lighter: rgba(98,114,164,0.8);
-    --icon-strong:#f8f8f2;
-    --icon-lighter:#f8f8f2;
+    --secondary-stronger: rgba(98,114,164,.8);
+    --secondary: rgba(98,114,164,.8);
+    --secondary-lighter: rgba(98,114,164,.8);
+    --icon-strong: #f8f8f2;
+    --icon-lighter: #f8f8f2;
     --intro-secondary: #f8f8f2;
     --message-primary: #f8f8f2;
     --system-message-text: #f8f8f2;
     --shadow-rgb: rgb(189, 147, 249);
-    --danger: #ff5555;
+    --danger: #f55;
     --link: #8be9fd;
     --button-alternative: #f8f8f2;
-    
+    /* colors */
     --teal: #bd93f9;
     --teal-lighter: #ff79c6;
   }
