--- a/whatsapp-dracula.css
+++ b/whatsapp-dracula.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name    Whatsapp Dracula
 @namespace   0xc0d3d00d
-@version   0.1.1
+@version   0.2.0
 @homepageURL https://github.com/0xc0d3d00d/whatsapp-dracula
 @updateURL   https://raw.githubusercontent.com/0xc0d3d00d/whatsapp-dracula/master/whatsapp-dracula.user.css
 @license   CC-BY-SA-4.0
@@ -15,6 +15,7 @@
     --background-default-hover: #44475a;
     --background-default-active: #44475a;
     --app-background-stripe: #44475a;
+    /* panel */
     --border-list: #44475a;
     --panel-background-lighter: #44475a;
     --panel-background-colored: #44475a;
@@ -23,6 +24,8 @@
     --panel-background-deeper: #282a36;
     --panel-header-background: #282a36;
     --search-input-background: #44475a;
+    --search-container-background: #282a36;
+    /* conversation */
     --conversation-panel-background: #282a36;
     --incoming-background: #6272a4;
     --incoming-background-rgb: rgb(98, 114, 164);
@@ -31,10 +34,13 @@
     --outgoing-background-deeper: #282a36;
     --system-message-background: #6272a4;
     --bubble-meta: #8be9fd;
+    /* compose */
     --rich-text-panel-background: #282a36;
     --compose-background: #44475a;
+    --compose-input-primary: #44475a;
     --compose-border: #44475a;
     --compose-primary: #f8f8f2;
+    /* intro */
     --intro-background: #282a36;
     /* modal */
     --modal-backdrop: rgba(68, 71, 90, .85);
@@ -77,6 +83,7 @@
     --danger: #f55;
     --link: #8be9fd;
     --button-alternative: #f8f8f2;
+    /* colors */
     --teal: #bd93f9;
     --teal-lighter: #ff79c6;
   }
