fixes to support chrome better

--- a/whatsapp-dracula.css
+++ b/whatsapp-dracula.css
@@ -29,6 +29,7 @@
     --conversation-panel-background: #282a36;
     --incoming-background: #6272a4;
     --incoming-background-rgb: rgb(98, 114, 164);
+    --incoming-background-deeper: #44475a;
     --outgoing-background: #44475a;
     --outgoing-background-rgb: rgb(68, 71, 90);
     --outgoing-background-deeper: #282a36;
@@ -36,6 +37,8 @@
     --bubble-meta: #8be9fd;
     /* compose */
     --rich-text-panel-background: #282a36;
+    --compose-input-background: #44475a;
+    --compose-input-border: #44475a;
     --compose-background: #44475a;
     --compose-input-primary: #44475a;
     --compose-border: #44475a;
